--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@radix-ui/react-label": "^2.1.8",
         "@radix-ui/react-select": "^2.2.6",
         "@radix-ui/react-slot": "^1.2.4",
+        "@radix-ui/react-switch": "^1.2.6",
         "@radix-ui/react-tabs": "^1.1.13",
         "@supabase/supabase-js": "^2.45.0",
         "@tanstack/react-query": "^5.50.0",
