--- a/package.json
+++ b/package.json
@@ -19,17 +19,22 @@
         "@radix-ui/react-slot": "^1.2.4",
         "@radix-ui/react-switch": "^1.2.6",
         "@radix-ui/react-tabs": "^1.1.13",
+        "@react-google-maps/api": "^2.20.7",
         "@supabase/supabase-js": "^2.45.0",
         "@tanstack/react-query": "^5.50.0",
         "@tanstack/react-table": "^8.21.3",
+        "@types/leaflet": "^1.9.21",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
         "framer-motion": "^12.23.25",
+        "leaflet": "^1.9.4",
         "lucide-react": "^0.400.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.52.0",
+        "react-is": "^19.2.3",
+        "react-leaflet": "^5.0.0",
         "react-router-dom": "^6.24.0",
         "recharts": "^3.5.1",
         "tailwind-merge": "^2.6.0",
